--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -16,13 +16,14 @@ jobs:
         run: |
           BRANCH="${{ github.head_ref }}"
           echo "Source branch: $BRANCH"
-          if [[ "$BRANCH" == feature/* || "$BRANCH" == bugfix/* ]]; then
+          if [[ "$BRANCH" =~ ^feature/.* || "$BRANCH" =~ ^bugfix/.* ]]; then
             echo "✅ Valid branch: $BRANCH"
             echo "deploy=true" >> $GITHUB_OUTPUT
           else
             echo "⛔ Invalid branch: $BRANCH"
             echo "deploy=false" >> $GITHUB_OUTPUT
             exit 1
+          fi
 
   build-and-deploy:
     environment: development
