fix: Push changes

--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: ${{ vars.AWS_REGION }}
 
       - name: Login to ECR
         uses: aws-actions/amazon-ecr-login@v1
@@ -67,7 +67,7 @@ jobs:
         run: |
           aws ecs describe-task-definition \
             --task-definition ${{ secrets.TASK_DEFINITION }} \
-            --region ${{ env.AWS_REGION }} \
+            --region ${{ vars.AWS_REGION }} \
             --query 'taskDefinition' \
             --output json > taskdef.json
 
@@ -89,13 +89,13 @@ jobs:
           container-name: container
           image: ${{ steps.build-image.outputs.image }}
           environment-variables: |
-            AWS_REGION=${{ env.AWS_REGION }}
-            QA_SQS_QUEUE_URL=${{ env.QA_SQS_QUEUE_URL }}
-            REMARKETING_SERVICE_QUEUE_URL=${{ env.REMARKETING_SERVICE_QUEUE_URL }}
+            AWS_REGION=${{ vars.AWS_REGION }}
+            QA_SQS_QUEUE_URL=${{ vars.QA_SQS_QUEUE_URL }}
+            REMARKETING_SERVICE_QUEUE_URL=${{ vars.REMARKETING_SERVICE_QUEUE_URL }}
             ASPNETCORE_ENVIRONMENT=Development
-            QA_PROCESS_TABLE=${{ env.QA_PROCESS_TABLE }}
-            USER_TABLE=${{ env.USER_TABLE }}
-            MAX_NUM_PROCESSES=${{ env.MAX_NUM_PROCESSES }}
+            QA_PROCESS_TABLE=${{ vars.QA_PROCESS_TABLE }}
+            USER_TABLE=${{ vars.USER_TABLE }}
+            MAX_NUM_PROCESSES=${{ vars.MAX_NUM_PROCESSES }}
 
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
