--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -9,7 +9,7 @@ jobs:
   check-branch:
     runs-on: ubuntu-latest
     outputs:
-      deploy: ${{ steps.check.outputs.deploy }}
+      valid_branch: ${{ steps.check.outputs.valid_branch }}
     steps:
       - name: Validate source branch name
         id: check
@@ -18,17 +18,36 @@ jobs:
           echo "Source branch: $BRANCH"
           if [[ "$BRANCH" =~ ^feature/.* || "$BRANCH" =~ ^bugfix/.* ]]; then
             echo "✅ Valid branch: $BRANCH"
-            echo "deploy=true" >> $GITHUB_OUTPUT
+            echo "valid_branch=true" >> $GITHUB_OUTPUT
           else
             echo "⛔ Invalid branch: $BRANCH"
-            echo "deploy=false" >> $GITHUB_OUTPUT
+            echo "valid_branch=false" >> $GITHUB_OUTPUT
             exit 1
           fi
 
+  analyze-commits:
+    runs-on: ubuntu-latest
+    needs: check-branch
+    if: needs.check-branch.outputs.valid_branch == 'true'
+    outputs:
+      deploy: ${{ steps.check.outputs.deploy }}
+    steps:
+      - uses: actions/checkout@v4
+      - id: check
+        run: |
+          COMMITS=$(git log -1 --pretty=%B)
+          echo "Last commit message: $COMMITS"
+          if echo "$COMMITS" | grep -E "(feat|fix|BREAKING CHANGE)"; then
+            echo "✅ Relevant change found. Proceeding with deploy."
+            echo "deploy=true" >> $GITHUB_OUTPUT
+          else
+            echo "ℹ️ No relevant changes. Skipping deploy."
+            echo "deploy=false" >> $GITHUB_OUTPUT
+
   build-and-deploy:
     environment: development
-    needs: check-branch
-    if: needs.check-branch.outputs.deploy == 'true'
+    needs: [check-branch, analyze-commits]
+    if: needs.analyze-commits.outputs.deploy == 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -54,6 +73,7 @@ jobs:
       - name: Login to ECR
         uses: aws-actions/amazon-ecr-login@v1
 
+        
       - name: Build & Push Dev Image
         id: build-image
         run: |
