--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -5,14 +5,6 @@ on:
     types: [closed]
     branches: [main]
 
-env:
-  AWS_REGION: ${{ secrets.ECR_REGION }}
-  ECR_REPOSITORY: ${{ secrets.ECR_REPO_NAME }}
-  ECS_SERVICE: ${{ secrets.ECS_SERVICE }}
-  ECS_CLUSTER: ${{ secrets.ECS_CLUSTER }}
-  ECS_TASK_DEFINITION: ecs/task-definition.json
-  CONTAINER_NAME: container
-
 permissions:
   contents: read
 
@@ -30,7 +22,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+          aws-region: ${{ vars.AWS_REGION }}
 
       - name: Run Semantic Release
         uses: cycjimmy/semantic-release-action@v3
