--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -9,6 +9,75 @@ permissions:
   contents: read
 
 jobs:
+  analyze-commits:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Determine next version and tag
+        id: versioning
+        run: |
+          echo "🔍 Getting latest tag..."
+          latest_tag=$(git describe --tags --abbrev=0 || echo "v0.0.0")
+          echo "Latest tag: $latest_tag"
+
+          # Remove leading 'v' and split
+          version=${latest_tag#v}
+          IFS='.' read -r major minor patch <<< "$version"
+
+          # Get all commits since the last tag
+          echo "🧾 Getting commits since $latest_tag..."
+          commits=$(git log "$latest_tag"..HEAD --pretty=format:%B)
+
+          echo "$commits" | grep -q "BREAKING CHANGE" && bump=major
+          echo "$commits" | grep -q "^feat" && [[ $bump != "major" ]] && bump=minor
+          echo "$commits" | grep -q "^fix" && [[ -z "$bump" ]] && bump=patch
+
+          if [[ -z "$bump" ]]; then
+            echo "ℹ️ No version-worthy changes found. Skipping tag."
+            echo "new_tag=" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+
+          # Increment version
+          case $bump in
+            major)
+              major=$((major + 1))
+              minor=0
+              patch=0
+              ;;
+            minor)
+              minor=$((minor + 1))
+              patch=0
+              ;;
+            patch)
+              patch=$((patch + 1))
+              ;;
+          esac
+
+          new_tag="v$major.$minor.$patch"
+          echo "📦 New version: $new_tag"
+
+          # Create the tag
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git tag "$new_tag"
+          git push origin "$new_tag"
+
+          echo "new_tag=$new_tag" >> $GITHUB_OUTPUT
+
+      - name: Use new version
+        run: echo "The new tag is ${{ steps.versioning.outputs.new_tag }}"
+
+      - name: Commit version bump and create tag
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git commit -am "chore(release): v${{ steps.versioning.outputs.new_tag }} [skip ci]" || echo "No changes to commit"
+          git tag v${{ steps.versioning.outputs.new_tag }}
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}
+          git push origin main --tags
+
   deploy:
     if: github.event.pull_request.merged == true && startsWith(github.head_ref, 'release/')
     runs-on: ubuntu-latest
