--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -12,6 +12,11 @@ jobs:
   analyze-commits:
     if: github.event.pull_request.merged == true && startsWith(github.head_ref, 'release/')
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write 
+      packages: write 
+      
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
