--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -194,7 +194,7 @@ jobs:
           echo "🧼 Deleting tag 'release' from ECR repo '${{ secrets.ECR_REPO }}' in region '${{ vars.AWS_REGION }}'..."
           
           aws ecr batch-delete-image \
-            --repository-name "${{ secrets.ECR_REPO }}" \
+            --repository-name "${{ vars.ECR_REPO }}" \
             --region "${{ vars.AWS_REGION }}" \
             --image-ids imageTag="release"
             
