--- a/.github/workflows/hotfix-release.yml
+++ b/.github/workflows/hotfix-release.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   build-and-deploy-hotfix:
     if: github.event.pull_request.merged == true && startsWith(github.head_ref, 'hotfix/')
+    environment: production
     runs-on: ubuntu-latest
     steps:
       - name: Checkout main branch
