--- a/.github/workflows/commit-tag-bump.yml
+++ b/.github/workflows/commit-tag-bump.yml
@@ -1,38 +1,43 @@
-name: "Commit Version Bump and Create Tag"
-description: "Commits any version bump, creates a Git tag from the new tag, and pushes it to the remote repository."
-inputs:
-  new_tag:
-    description: "The new version tag (e.g., v1.2.3) to create."
-    required: true
-  branch:
-    description: "The branch to push the tag to. Defaults to 'main'."
-    required: false
-    default: "main"
-runs:
-  using: "composite"
-  steps:
-    - name: Configure Git
-      run: |
-        git config user.name "github-actions[bot]"
-        git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-      shell: bash
+name: Commit Version Bump and Create Tag
 
-    - name: Commit version bump
-      run: |
-        git commit -am "chore(release): ${{ inputs.new_tag }} [skip ci]" || echo "No changes to commit"
-      shell: bash
+on:
+  workflow_call:
+    inputs:
+      new_tag:
+        description: "The new version tag (e.g., v1.2.3) to create."
+        required: true
+        type: string
+      branch:
+        description: "The branch to push the tag to. Defaults to 'main'."
+        required: false
+        default: "main"
+        type: string
 
-    - name: Create Git tag
-      run: |
-        git tag ${{ inputs.new_tag }}
-      shell: bash
+jobs:
+  tag_version:
+    runs-on: ubuntu-latest
 
-    - name: Set remote URL with token
-      run: |
-        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-      shell: bash
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Push tags to remote
-      run: |
-        git push origin ${{ inputs.branch }} --tags
-      shell: bash
+      - name: Configure Git
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+      - name: Commit version bump
+        run: |
+          git commit -am "chore(release): ${{ inputs.new_tag }} [skip ci]" || echo "No changes to commit"
+
+      - name: Create Git tag
+        run: |
+          git tag ${{ inputs.new_tag }}
+
+      - name: Set remote URL with token
+        run: |
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+
+      - name: Push tags to remote
+        run: |
+          git push origin ${{ inputs.branch }} --tags
