--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -15,11 +15,6 @@ on:
         description: 'The environment for the workflow'
         required: true
         type: string
-      dockerfile:
-        description: 'Path to the Dockerfile'
-        required: false
-        type: string
-        default: 'Dockerfile'
     secrets:
       ECR_REPO: {}
 
@@ -45,7 +40,7 @@ jobs:
         run: |
           IMAGE_TAG=${{ inputs.image_tag }}
           echo "Building Docker image with tag $IMAGE_TAG..."
-          docker build -t ${{ secrets.ECR_REPO }}:$IMAGE_TAG -f ${{ inputs.dockerfile }} .
+          docker build -t ${{ secrets.ECR_REPO }}:$IMAGE_TAG -f Dockerfile .
           echo "Built image: ${{ secrets.ECR_REPO }}:$IMAGE_TAG"
           echo "image=${{ secrets.ECR_REPO }}:$IMAGE_TAG" >> $GITHUB_OUTPUT
         shell: bash
