--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -15,6 +15,11 @@ on:
         description: 'The environment for the workflow'
         required: true
         type: string
+      dockerfile:
+        description: 'Path to the Dockerfile'
+        required: false
+        type: string
+        default: 'Dockerfile'
     secrets:
       ECR_REPO: {}
 
@@ -25,6 +30,9 @@ jobs:
     outputs:
       image: ${{ steps.build.outputs.image }}
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -41,6 +49,7 @@ jobs:
           IMAGE_TAG=${{ inputs.image_tag }}
           echo "Building Docker image with tag $IMAGE_TAG..."
           docker build -t ${{ secrets.ECR_REPO }}:$IMAGE_TAG -f Dockerfile .
+          docker build -t ${{ secrets.ECR_REPO }}:$IMAGE_TAG -f ${{ inputs.dockerfile }} .
           echo "Built image: ${{ secrets.ECR_REPO }}:$IMAGE_TAG"
           echo "image=${{ secrets.ECR_REPO }}:$IMAGE_TAG" >> $GITHUB_OUTPUT
         shell: bash
