fix: Try vars there

--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -33,20 +33,42 @@ jobs:
       environment: development
     secrets: inherit
 
+  export_vars:
+    needs: check_if_deploy_needed 
+    runs-on: ubuntu-latest
+    outputs:
+      AWS_REGION: ${{ steps.vars.outputs.AWS_REGION }}
+      QA_SQS_QUEUE_URL: ${{ steps.vars.outputs.QA_SQS_QUEUE_URL }}
+      REMARKETING_SERVICE_QUEUE_URL: ${{ steps.vars.outputs.REMARKETING_SERVICE_QUEUE_URL }}
+      ASPNETCORE_ENVIRONMENT: ${{ steps.vars.outputs.ASPNETCORE_ENVIRONMENT }}
+      QA_PROCESS_TABLE: ${{ steps.vars.outputs.QA_PROCESS_TABLE }}
+      USER_TABLE: ${{ steps.vars.outputs.USER_TABLE }}
+      MAX_NUM_PROCESSES: ${{ steps.vars.outputs.MAX_NUM_PROCESSES }}
+
+    steps:
+      - id: vars
+        run: |
+          echo "AWS_REGION=${{ vars.AWS_REGION }}" >> $GITHUB_OUTPUT
+          echo "QA_SQS_QUEUE_URL=${{ vars.QA_SQS_QUEUE_URL }}" >> $GITHUB_OUTPUT
+          echo "REMARKETING_SERVICE_QUEUE_URL=${{ vars.REMARKETING_SERVICE_QUEUE_URL }}" >> $GITHUB_OUTPUT
+          echo "QA_PROCESS_TABLE=${{ vars.QA_PROCESS_TABLE }}" >> $GITHUB_OUTPUT
+          echo "USER_TABLE=${{ vars.USER_TABLE }}" >> $GITHUB_OUTPUT
+          echo "MAX_NUM_PROCESSES=${{ vars.MAX_NUM_PROCESSES }}" >> $GITHUB_OUTPUT
+
   deploy_to_ecs:
-    needs: build_and_push
+    needs: [export_vars, build_and_push]
     uses: ./.github/workflows/deploy-ecs.yml
     with:
       image: ${{ needs.build_and_push.outputs.image }}
       environment: development
       environment_variables: |
-        AWS_REGION=$AWS_REGION
-        QA_SQS_QUEUE_URL=$QA_SQS_QUEUE_URL
-        REMARKETING_SERVICE_QUEUE_URL=$REMARKETING_SERVICE_QUEUE_URL
+        AWS_REGION=${{ needs.export_vars.outputs.AWS_REGION }}
+        QA_SQS_QUEUE_URL=${{ needs.export_vars.outputs.QA_SQS_QUEUE_URL }}
+        REMARKETING_SERVICE_QUEUE_URL=${{ needs.export_vars.outputs.REMARKETING_SERVICE_QUEUE_URL }}
         ASPNETCORE_ENVIRONMENT=Development
-        QA_PROCESS_TABLE=$QA_PROCESS_TABLE
-        USER_TABLE=$USER_TABLE
-        MAX_NUM_PROCESSES=$MAX_NUM_PROCESSES
+        QA_PROCESS_TABLE=${{ needs.export_vars.outputs.QA_PROCESS_TABLE }}
+        USER_TABLE=${{ needs.export_vars.outputs.USER_TABLE }}
+        MAX_NUM_PROCESSES=${{ needs.export_vars.outputs.MAX_NUM_PROCESSES }}
     secrets: inherit
 
   delete_ecr_tag: 
