--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -43,8 +43,7 @@ jobs:
       - name: Login to ECR
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build Docker image
-        id: build
+      - id: build
         run: |
           IMAGE_TAG=${{ inputs.image_tag }}
           echo "Building Docker image with tag $IMAGE_TAG..."
